# game_of_life

./: Cargo.toml  game_of_life_0.1.0.bb
src/: main.rs
