[package]
name = "game_of_life"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
repository = "https://github.com/shoaibmerchant/game_of_life"
edition = "2021"
publish = false

[dependencies]
iced = { version = "0.6.0", default-features = false, features = ["canvas", "tokio", "debug", "glow"] }
iced_native = { version = "0.7.0" }
tokio = { version = "1.0", features = ["sync"] }
itertools = "0.9"
rustc-hash = "1.1"
env_logger = "0.9"
notan = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"
